--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -11,8 +11,8 @@
     <link
             rel="stylesheet"
             href="./lib/SpoqaHanSansNeo.min.css"/>
-<!--    <script src="./lib/vue.global.js"></script>-->
-        <script src="./lib/vue.min.js"></script>
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!--        <script src="./lib/vue.min.js"></script>-->
     <script src="./lib/lucide.min.js"></script>
 </head>
 
@@ -27,18 +27,21 @@
 <script src="./components/meterArea.js"></script>
 <script src="./components/detailArea.js"></script>
 <script src="./components/updateArea.js"></script>
+<script src="./components/settingArea.js"></script>
 
 <script>
   const {createApp, ref, onMounted, onUnmounted, watch} = Vue;
 
-  createApp({
+  const app = createApp({
     components: {
       HeaderArea: window.HeaderArea,
       MeterArea: window.MeterArea,
       DetailArea: window.DetailArea,
-      UpdateArea: window.UpdateArea
+      UpdateArea: window.UpdateArea,
+      SettingArea: window.SettingArea,
     },
     setup() {
+      // detail ref
       const isCollapse = ref(false);
       const isDetailOpen = ref(false);
       const detailRowId = ref("");
@@ -46,16 +49,21 @@
       const targetName = ref("");
       let intervalId = null;    // dps polling id
 
+      // drag ref
       const isDragging = ref(false);
       const startX = ref(0);
       const startY = ref(0);
       const initialStageX = ref(0);
       const initialStageY = ref(0);
 
+      // battletime ref
       const fightState = ref("state-grace");
       const lastChangedAt = ref(0);
       const lastBattleTimeMs = ref(null);
       const battleTimeMs = ref(null);
+
+      // setting ref
+      const isSetting = ref(false);
 
       // 리셋버튼 이벤트
       const resetClick = () => {
@@ -68,12 +76,13 @@
         fightState.value = "state-grace";
         lastBattleTimeMs.value = null;
         lastChangedAt.value = 0;
+        window.javaBridge?.resetDps();
       };
 
-      // 정렬 이벤트
+      // 리스트 정렬변환 클릭 이벤트
       const collapseClick = () => {
+        console.log(isCollapse.value)
         isCollapse.value = !isCollapse.value;
-        dpsDatas.value.reverse();
       };
 
       //리스트에서 유저클릭시 이벤트
@@ -122,8 +131,9 @@
               if (!raw || typeof raw !== "string") return;
 
               let {rows, targetName: newTargetName, battleTimeMs: _battleTimeMs} = buildRowsFromPayload(raw);
-
-              dpsDatas.value = rows;
+              const multiplier = isCollapse.value ? -1 : 1
+              dpsDatas.value = rows.sort((a, b) =>
+                multiplier * (Number(b.damageContribution || 0) - Number(a.damageContribution || 0)));
               targetName.value = newTargetName;
               battleTimeMs.value = _battleTimeMs;
             }, 200);
@@ -152,12 +162,6 @@
         }
       };
 
-      // 미터기 상세 창 닫기 이벤트
-      const detailClose = () => {
-        isDetailOpen.value = false;
-        detailRowId.value = "";
-      }
-
       // 배틀 시간 계산
       watch(battleTimeMs, (newVal) => {
         const now = Date.now();
@@ -178,6 +182,10 @@
           }
         }
       }, {deep: true});
+
+      window.addEventListener("nativeResetHotKey", () => {
+        resetClick();
+      });
 
       onMounted(() => {
         document.addEventListener("mousedown", handleMouseDown);
@@ -202,17 +210,17 @@
         fightState,
         battleTimeMs,
         lastBattleTimeMs,
+        isSetting,
         resetClick,
         collapseClick,
         onClickUserRow,
-        detailClose,
         formatMMSS
       };
     },
     template: `
       <div class="meter">
         <HeaderArea :targetName="targetName" :isCollapse="isCollapse" @resetClick="resetClick"
-                    @collapseClick="collapseClick"/>
+                    @collapseClick="collapseClick" v-model:is-setting="isSetting"/>
 
         <MeterArea @onClickUserRow="onClickUserRow" :rows="dpsDatas"/>
 
@@ -222,12 +230,22 @@
         </div>
       </div>
 
-      <DetailArea @closeClick="detailClose" :isDetailOpen="isDetailOpen" :id="detailRowId"
-                  :combatTime="formatMMSS(lastBattleTimeMs || 0)"/>
+      <DetailArea v-model:is-detail-open="isDetailOpen"
+                  :id="detailRowId" :combatTime="formatMMSS(lastBattleTimeMs || 0)"/>
 
       <UpdateArea/>
+
+      <SettingArea v-model:is-setting="isSetting"/>
     `
-  }).mount('#app');
+  });
+
+  window.addEventListener('javaReady', () => {
+    if (window.setupVueErrorHandler) {
+      window.setupVueErrorHandler(app);
+    }
+  }, {once: true});
+
+  app.mount('#app');
 </script>
 </body>
 </html>
