--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -11,8 +11,8 @@
     <link
             rel="stylesheet"
             href="./lib/SpoqaHanSansNeo.min.css"/>
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <!--        <script src="./lib/vue.min.js"></script>-->
+<!--    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>-->
+    <script src="./lib/vue.min.js"></script>
     <script src="./lib/lucide.min.js"></script>
 </head>
 
